--- a/SukiUiTest/SukiUiTest.Android/SukiUiTest.Android.csproj
+++ b/SukiUiTest/SukiUiTest.Android/SukiUiTest.Android.csproj
@@ -22,12 +22,12 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Xamarin.AndroidX.AppCompat" Version="1.3.1.3"/>
-        <PackageReference Include="Xamarin.AndroidX.Lifecycle.ViewModel" Version="2.3.1.3"/>
-        <PackageReference Include="Avalonia.Android" Version="$(AvaloniaVersion)"/>
+        <PackageReference Include="Xamarin.AndroidX.AppCompat" Version="1.5.1.1" />
+        <PackageReference Include="Xamarin.AndroidX.Lifecycle.ViewModel" Version="2.5.1.1" />
+        <PackageReference Include="Avalonia.Android" Version="11.0.0-preview4" />
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\SukiUiTest\SukiUiTest.csproj"/>
+        <ProjectReference Include="..\SukiUiTest\SukiUiTest.csproj" />
     </ItemGroup>
 </Project>
