--- a/SukiUiTest/SukiUiTest.Web/SukiUiTest.Web.csproj
+++ b/SukiUiTest/SukiUiTest.Web/SukiUiTest.Web.csproj
@@ -22,13 +22,13 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.0"/>
-        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.0" PrivateAssets="all"/>
-        <PackageReference Include="Avalonia.Web.Blazor" Version="$(AvaloniaVersion)"/>
+        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.1" PrivateAssets="all" />
+        <PackageReference Include="Avalonia.Web.Blazor" Version="11.0.0-preview4" />
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\SukiUiTest\SukiUiTest.csproj"/>
+        <ProjectReference Include="..\SukiUiTest\SukiUiTest.csproj" />
     </ItemGroup>
 
 </Project>
